--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://example.com/"
+baseurl = "ahmedas91.github.io"
 title = "Ahmad Mohammad"
 languageCode = "en-us"
 MetaDataFormat = "toml"
