--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ paginate = 10
     # Changes sidebar background and link/accent colours.
     # See below for more colour options.
     # This also works: "theme-base-08 layout-reverse", or just "layout-reverse".
-    theme = "theme-base-0f"
+    theme = "theme-base-0d"
 
     # Select a syntax highight.
     # Check the static/css/highlight directory for options.
